fix #32: Aligned bug icon with link

--- a/megamod.css
+++ b/megamod.css
@@ -24,6 +24,7 @@
      display: flex;
      align-items: center;
      justify-content: center;
+    background-color: rgba(0,0,0,0.5);
 }
 
 .megamod-settings-modal-container {
@@ -276,6 +277,10 @@
 .megamod-settings-modal-bug-icon {
 	padding-left: 0.4rem;
 	float: right;
+}
+
+.megamod-settings-modal-bug-icon i {
+    vertical-align: baseline;
 }
 
 .megamod-settings-modal-bug-link {
